test/StringProcessing/Sema/regex_builder_fix_import_after_imports.code
// RUN: %empty-directory(%t)

// Generate some dummy modules to import
// RUN: %target-language-frontend -emit-module -module-name A -o %t/A.codemodule %S/Inputs/dummy.code
// RUN: %target-language-frontend -emit-module -module-name B -o %t/B.codemodule %S/Inputs/dummy.code
// RUN: %target-language-frontend -emit-module -module-name C -o %t/C.codemodule %S/Inputs/dummy.code

// RUN: %target-typecheck-verify-language -enable-bare-slash-regex -disable-availability-checking -I %t

// REQUIRES: language_language_parser

import A

import B

Regex { // expected-error {{regex builder requires the 'RegexBuilder' module be imported'}} {{14:9-9=\nimport RegexBuilder}}
  /abc/
}

import C
